Improved use of the Lombok library in tests